--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project by Brent Cleary</title>
+    <title>TacoCat: A Coding Project by Brent Cleary</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
   <!-- ====== NAV SECTION ====== -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-          <a class="navbar-brand" href="/"><img src="img/LogoFavicon.jpg" class="d-inline-block align-text-top" width="30" height="24" alt="Brent Cleary Logo"> App Name</a>
+          <a class="navbar-brand" href="/"><img src="img/LogoFavicon.jpg" class="d-inline-block align-text-top" width="30" height="24" alt="Brent Cleary Logo"> TacoCat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
               aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
                       <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/BrentCleary/TacoCat">Git Repo</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" target="_blank" href="https://brentcleary-portfolio.netlify.app/">About</a>
@@ -57,7 +57,7 @@
   <!-- ====== MAIN SECTION ====== -->
   <main class="flex-shrink-0">
     <div class="container py-5 px-5 mt-5">
-      <h2 class="border-1 border-bottom border-dark">The Code for APP NAME</h2>
+      <h2 class="border-1 border-bottom border-dark">The Code for TacoCat</h2>
       <div class="row row-cols-1 row-cols-lg-2">
         <div class="col-lg-8">
           <pre class="line-numbers"><code class="language-javascript">
@@ -69,8 +69,7 @@
           </pre>
         </div>
         <div class="col-lg-4">
-          <p>The Code is Structured in One Function</p>
-          <h5>Hello World</h5>
+          <h5>TacoCat</h5>
           <p>Hello World is a function that displays an alert with a message of "Hello World"</p>
         </div>
       </div>
