--- a/app.html
+++ b/app.html
@@ -67,19 +67,19 @@
           <div class="col col-lg-8 p-3">
             <h3>Enter a Word, Sentence, or Phrase</h3>
             <form class="row gy-2 gx-3">
-              <div>
+              <div class="12">
                 <input class="form-control" type="text" id="userInput" placeholder="Write your phrase here..." aria-label="userInput">
               </div>
               <div>
-                <button class="btn btn-primary mt-2" id="submitButton">TacoCat</button>
+                <button class="btn btn-primary mt-2" id="btnSubmit">TacoCat</button>
               </div>
             </form>
-            <div class="row mt-5">
-              <div class="col">
-                <h2 class="border-bottom border-1">Results</h2>
-                <p class="">Success! <span id="successMsg"></span> is a Palindrome!</p>
-                <p class="">It seems <span id="successMsg"></span>is not Palindrome.</p> 
-              </div>
+            <div class="alert alert-success mt-5 invisible" id="alert" role="alert">
+              <h4 class="alert-heading">Well Done</h4>
+              <hr>
+              <p class="mb-0" id="msg">
+                <!-- Insert a Message Here -->
+              </p>
             </div>
           </div>
 
@@ -118,6 +118,10 @@
 
   <!-- JS Script -->
   <script src="js/site.js"></script>
+
+  <script>
+    document.getElementById("btnSubmit").addEventListener("click", getValues);
+  </script>
 
 </body>
 
