--- a/app.html
+++ b/app.html
@@ -71,11 +71,11 @@
                 <input class="form-control" type="text" id="userInput" placeholder="Write your phrase here..." aria-label="userInput">
               </div>
               <div>
-                <button class="btn btn-primary mt-2" id="btnSubmit">TacoCat</button>
+                <button class="btn btn-primary mt-2" id="btnSubmit" type="button">TacoCat</button>
               </div>
             </form>
-            <div class="alert alert-success mt-5 invisible" id="alert" role="alert">
-              <h4 class="alert-heading">Well Done</h4>
+            <div class="alert mt-5 invisible" id="alert" role="alert">
+              <h4 class="alert-heading" id="alertHeader"></h4>
               <hr>
               <p class="mb-0" id="msg">
                 <!-- Insert a Message Here -->
