Update Success/Fail Alert

--- a/app.html
+++ b/app.html
@@ -74,8 +74,8 @@
                 <button class="btn btn-primary mt-2" id="btnSubmit" type="button">TacoCat</button>
               </div>
             </form>
-            <div class="alert mt-5 invisible bg-light" id="alert" role="alert">
-              <h4 class="alert-heading" id="alertHeader"></h4>
+            <div class="alert mt-5 invisible alert-warning text-center" id="alert" role="alert">
+              <h4 class="alert-heading text-center" id="alertHeader"></h4>
               <hr>
               <p class="mb-0" id="msg">
                 <!-- Insert a Message Here -->
